<resources>
    <string name="app_name">Справочник мигранта</string>
    <string name="reg_name">Вам нужно зарегистрироваться чтобы писать на форуме</string>
    <string name="my_text">This is an <u>underline</u>.</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="menu_item_language">kg</string>
    <string name="call_button_text">Позвонить сейчас</string>
    <string name="bt_news">Важно знать</string>
    <string name="bt_eaeu">Правила пребывания в ЕАЭС</string>
    <string name="bt_hot_line">Горячие линии</string>
    <string name="bt_embassy">Посольства и консульства KP</string>
    <string name="bt_diaspora">Диаспоры и представители</string>
    <string name="bt_abroad">Правила пребывания за рубежом</string>
    <string name="bt_ht">Осторожно! Торговля людьми</string>
    <string name="bt_prohibition">Запрет въезда в РФ</string>
    <string name="bt_employment">Трудоустройство</string>
    <string name="bt_faq">Часто задаваемые вопросы</string>
    <string name="ac_embassy">Посольства</string>
    <string name="ac_abroad">Правила пребывания за рубежом</string>
    <string name="toast_no_internet">Включите интернет и обновите</string>
    <string name="ac_diaspora">Диаспора и общественные представители</string>
    <string name="ac_eaeu">Правила пребывания в ЕАЭС</string>
    <string name="ac_employment">Трудоустройство</string>
    <string name="ac_faq">Вопросы и ответы</string>
    <string name="ac_hotline">Горячие Линии</string>
    <string name="ac_news">Новости</string>
    <string name="ac_prohib">Запрет въезда в РФ</string>
    <string name="ac_about_project">О проекте</string>
    <string name="ac_ht">Осторожно! Торговля людьми</string>
    <string name="menu_about">О проекте</string>
    <string name="tv_faq_answer">Вопрос</string>
    <string name="tv_question_faq">Ответ</string>
    <string name="tv_embassy_consulate">Консульские отделы</string>
    <string name="ac_consulate_actionbar">Консульства</string>
    <string name="phone_line">Горячая линия Государственной службы по миграции при Правительстве КР </string>
    <string name="tv_choose_country">Выберите страну из списка</string>
    <string name="tv_choose_region">Выберите регион из списка</string>
    <string name="ac_nko">НКО</string>
    <string name="bt_nko_in_ht">Список НКО, работающих по вопросам предотвращения торговли людьми</string>
    <string name="ac_blacklist">"Проверка запрета на въезд в РФ</string>
    <string name="tv_blacklistin_rf">"Проверка запрета на въезд в РФ</string>
    <string name="ac_username">Введите Фамилию в форму поиска для проверки наличия в «Чёрном списке»:</string>
    <string name="tv_date_in_blacklist">Введите дату рождения:</string>
    <string name="toast_copy_to_buffer">Скопировано в буфер обмена</string>
    <string name="tv_about_project_name">Проект Государственного Департамента США «Содействие Правительству Кыргызстана в укреплении нормативно-правовой и технической базы в области противодействия торговли людьми»


    </string>
    <string name="toast_karta">Перейти на Карту</string>
    <string name="toast_copy">Скопировать</string>
    <string name="tv_2_about_ac">
        Государственная миграционная служба при Правительстве Кыргызской Республики
        \n\n
        Адрес: г. Бишкек, ул. Токтогула №237
        \n
        Телефон: 0 312 65-02-54</string>
    <string name="tv_3_about_ac">Государственный Департамент США</string>
    <string name="tv_4_about_ac">Международная организация по миграции</string>
    <string name="ac_emloyment">Информационно-консультационный центр ГСМ при ПКР</string>
    <string name="ac_emloyment_license">Информационно-консультационный центр ГСМ при ПКР</string>


    <string name="ac_faq_1">Если вы стали жертвой торговли людьми, не стыдитесь этого. Ваши права гарантированы законом. Обратитесь за помощью как можно скорее. \n" +
                "Мигранты также имеют право на защиту государства, юридическую помощь и доступ к социальным услугам. Если вы жертва торговли людьми, вы также можете получить помощь.\n" +
                "Свяжитесь с уполномоченными людьми, если:\n      Вас либо кого-то из ваших знакомых заставляют работать бесплатно!\n" +
                "Вы лишены свободы передвижения и не можете связаться с родственниками!\n" +
                "Ваш работодатель причиняет вам моральный либо физический вред!\n" +
                "Существуют горячие линии, с помощью которых можно сообщить властям и НПО о случаях работорговли и эксплуатации.");
        istories.setNickName("Если вы стали  жертвой  торговли людьми</string>
    <string name="ac_hotline_second">Горячая линия</string>
    <string name="ac_hotline_phone">Позвонить сейчас</string>
    <string name="ac_hotline_line">Горячая линия</string>
    <string name="ac_hotline_next">перейти</string>
    <string name="ac_inpection_btn">Проверить</string>
    <string name="ac_mom_g">Центр трудоустройства граждан Кыргызской Республики</string>
    <string name="ac_hotline_ky">В Информационно-консультационном центре Государственной службы миграции при Правительстве КР функционирует колл-центр Горячей Линии 189, направленной на предоставление своевременной квалифицированной консультации и помощи по вопросам миграции и рисков торговли людьми. Позвонив по интеллектуальному номеру 0 800 0000 189 (звонок бесплатный) любой житель Кыргызстана сможет проконсультироваться и получить практические советы по выезду и трудоустройству, а также сообщить о случаях торговли людьми или несанкционированных наборах на трудоустройство за рубежом и, возможно, предотвратить попадание в рабство своих соотечественников.</string>
    <string name="ac_hotline_str">Аналогичные горячие линии в других странах</string>
    <string name="ac_employment_str">Список частных агентств занятости, имеющих лицензию на осуществление трудоустройства граждан КР за рубежом (по странам)</string>
    <string name="menu_o_proj">О проекте</string>
    <string name="ac_hotline_2">Если Вы стали жертвой торговли людьми и нуждаетесь в помощи – обратитесь за консультацией, позвонив на Горячую линию</string>
    <string name="bt_prohib_1">Представительство Государственной службы миграции Кыргызской Республики при ПКР в РФ</string>
    <string name="dastan">\t 1.<b> Кожобаев Толонбай Жанибекович </b>– руководитель Представительства Государственной службы миграции при ПКР в РФ;\n
       \n \t 2. <b>Шаршеев Марлес Каныбекович</b> – главный специалист Представительства, тел.: +7 925 735 4946;\n\n
        \t 3. Жорокулов Канатбек Кадырбекович – главный специалист Представительства, тел.: +7 926 100 37 35;\n\n
        \t 4. Авдывахапов Абдыманап Абдывахапович – ведущий специалист Представительства, тел.: +7929538 0361\n\n\n
        \t Юридический адрес представительства ГСМ при ПКР в Российской Федерации, город Москва, улица Большая Ордынка №64</string>
    <string name="tv_text">Информация о закрытии въезда в РФ носит справочный характер и юридической силы не имеет  для получения официального ответа  необходимо обратиться в Пограничную службу ФСБ РФ</string>
    <string name="day">день</string>
    <string name="month">месяц</string>
    <string name="year">год</string>
    <string name="error">Внимание!</string>
    <string name="yasno">Ясно</string>
    <string name="no_internet">Пожалуйста, проверьте Ваше интернет-соединение</string>
    <string name="cylka_na_rf">Обратиться в Веб приемную Пограничной службы ФСБ РФ</string>
    <string name="familya">Введите только Фамилию</string>
    <string name="async_string_progress">Подождите немного! Идет первоначальная загрузка файлов, после загрузки дальнейшее подключение к интернету не потребуется кроме раздела «Проверка запрета на Въезд в РФ»</string>

</resources>
