<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:wheel="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fff"
    android:fitsSystemWindows="true"
    android:orientation="vertical">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:layout_scrollFlags="scroll|enterAlways"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />


    </android.support.design.widget.AppBarLayout>



            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="16dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/ac_username" />


                    <EditText
                        android:id="@+id/edit_fio"

                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="Фамилия" />

                    <TextView
                        android:id="@+id/suka"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="16sp" />

                    <Button
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="5dp"
                        android:layout_marginTop="8dp"
                        android:background="@drawable/button_orange"
                        android:onClick="onclick"
                        android:text="@string/tv_date_in_blacklist"
                        android:textColor="#fff" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:visibility="gone">


                        <EditText
                            android:id="@+id/edit_day"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:hint="@string/day"
                            android:inputType="date" />

                        <EditText
                            android:id="@+id/edit_month"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:hint="@string/month"
                            android:inputType="date" />

                        <EditText
                            android:id="@+id/edit_year"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:hint="@string/year"
                            android:inputType="date" />


                    </LinearLayout>


                    <Button
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:background="@drawable/button_orange"
                        android:onClick="onClickNewStory"
                        android:text="@string/ac_inpection_btn"
                        android:textColor="#fff" />

                    <TextView
                        android:id="@+id/tv_result"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="18dp"
                        android:fontFamily="sans-serif-light"
                        android:textColor="#000"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                    <!--<com.pnikosis.materialishprogress.ProgressWheel-->
                    <!--android:id="@+id/pbHeaderProgress"-->
                    <!--android:layout_width="60dp"-->
                    <!--android:layout_height="60dp"-->
                    <!--android:layout_gravity="center_horizontal"-->
                    <!--android:layout_centerHorizontal="true"-->
                    <!--android:layout_centerVertical="true"-->
                    <!--android:visibility="gone"-->
                    <!--wheel:matProg_barColor="#2196f3"-->
                    <!--wheel:matProg_progressIndeterminate="true" />-->

                    <ProgressBar
                        android:id="@+id/pbHeaderProgress"
                        android:layout_width="60dp"
                        android:layout_height="61dp"
                        android:layout_centerHorizontal="true"
                        android:layout_centerVertical="true"
                        android:layout_gravity="center_horizontal" />

                    <TextView
                        android:id="@+id/tv_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="18dp"
                        android:textColor="#FF0000"
                        android:textSize="20sp" />


                </LinearLayout>
            </ScrollView>

            <LinearLayout
                android:id="@+id/linearLayout4"
                android:layout_width="match_parent"
                android:layout_height="fill_parent"
                android:layout_alignParentBottom="true"
                android:layout_below="@+id/linearLayout3"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="3dp"
                android:layout_marginTop="20dp"
                android:gravity="bottom"
                android:orientation="horizontal"
                android:paddingLeft="5dp"
                android:paddingRight="5dp">

                <Button
                    android:id="@+id/button1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/button_green"
                    android:onClick="onClickCyl"
                    android:padding="7dp"
                    android:text="@string/cylka_na_rf"
                    android:textColor="@color/colorPrimary"

                    />
            </LinearLayout>
</LinearLayout>